--- a/failure.html
+++ b/failure.html
@@ -13,9 +13,8 @@
         <h1 class="display-5 fw-bold">Uh oh!</h1>
         <p class="col-md-8 fs-4">We encountered a problem while signing you up. Please try again later or contact the developer.</p>
         
-        <form action="/failure" method="post">
-          <button class="btn btn-warning btn-lg" type="button">Try again</button>
-        </form>
+       <form action="/failure" method="GET">
+          <button class="btn btn-warning btn-lg" type="submit">Try again</button>
       </div>
     </div>
   </body>
